<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Artisanat</string>
    <string name="artisanat">Artisanat</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ? </string>
    <string name="dont_have_an_account">Don\'t have an account ? </string>
    <string name="register">Register</string>
    <string name="already_have_account">"Have an account ? "</string>
    <string name="add_a_new_listing">Add a new Listing</string>
    <string name="new_Listing_text">Describe your item best, so the buyers can have a better idea about the product.</string>
    <string name="photos">Photos</string>
    <string name="photos_text">Add as many as you can so buyers can see every detail.(at least two images*)</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="listing_details">Listing details</string>
    <string name="listing_text">Tell the customers all about your product and why they would love it</string>
    <string name="title">Title *</string>
    <string name="description">Description</string>
    <string name="about_the_listing">About the listing *</string>
    <string name="category">Category *</string>
    <string name="pricing_and_inventory">Pricing and inventory</string>
    <string name="quantity">Quantity *</string>
    <string name="price_mad_dh">Price* (MAD/dh)</string>
    <string name="cancel">Cancel</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="title_activity_display_items">DisplayItems</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="currency">dh</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="add_to_wishlist">Add to favorites</string>
    <string name="_0">0</string>
    <string name="MINUS">-</string>
    <string name="PLUS">+</string>
    <string name="loading">Loading...</string>
    <string name="save">Save for later</string>
    <string name="remove">Remove</string>
    <string name="items_title_goes_in_here">Items title goes in here</string>
    <string name="quantity1">Quantity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="full_name">Full name</string>
    <string name="sign_out">Sign out</string>
    <string name="address">Address</string>
    <string name="street_address">street address</string>
    <string name="phone_number">Phone number</string>
    <string name="gendertype">male/female</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="city">city</string>
    <string name="postalCode">Postal code</string>
    <string name="save_changes">Save changes</string>
    <string name="CIN">CIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="gender">Gender</string>
    <string name="search">Search...</string>
    <string name="admin_text">on this page you can see all the listings you have and you can also create new one</string>
    <string name="welcome_admin">Welcome to your shop</string>
    <string name="add_new_listing">ADD NEW LISTING</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="checkout">CheckOut</string>
    <string name="to">To :</string>
    <string name="mmmm_dd_yyyy">mmmm dd yyyy</string>
    <string name="date">Date :</string>
    <string name="item_id_number">item id number</string>
    <string name="item">Item :</string>
    <string name="item_to_order_title">item to order title</string>
    <string name="qty">Qty :</string>
    <string name="processed">Processed</string>
    <string name="delete">Delete</string>

</resources>
