<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_white_grey_full_border"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Item_details"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Item_image_cart"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Item_title_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/items_title_goes_in_here" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Item_title_cart"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/quantity1" />

                <TextView
                    android:id="@+id/Item_amount_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Item_title_cart"
                    android:layout_marginHorizontal="10dp"
                    android:layout_toEndOf="@id/quantity"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginHorizontal="4dp"
                    android:layout_toStartOf="@id/remove"
                    android:text="@string/save"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/remove"
                    android:textColor="#000"
                    android:textStyle="bold" />


            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>